<?xml version="1.0"?>
<package format="2">
  <name>heyrobo_navigation</name>
  <version>1.2.4</version>
  <description>
    The heyrobo_navigation provides roslaunch scripts for starting the navigation.
  </description>
  <license>Apache 2.0</license>
  <author email="sayoojputtankiyil@gmail.com">sayooj</author>

  <author>sayooj p</author>
  <maintainer email="sayoojputtankiyil@gmail.com">sayooj</maintainer>
  <url type="repository">https://github.com/sayoojsaps</url>
  <url type="bugtracker">hhttps://github.com/sayoojsaps</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
</package>
